--- a/app/views/posts/index.html.erb
+++ b/app/views/posts/index.html.erb
@@ -1,9 +1,5 @@
-<<<<<<< Updated upstream
 <header>TopPage</header>
-=======
-<h1>ブランチ作成忘れ</h1>
-
->>>>>>> Stashed changes
+<h1>練習問題</h1>
 <button>
   <%= link_to 'ボタン', '#' %>
 </button>
